// Teleport
// Copyright (C) 2025 Gravitational, Inc.
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package teleport.relaytunnel.v1alpha;

option go_package = "github.com/gravitational/teleport/gen/proto/go/teleport/relaytunnel/v1alpha;relaytunnelv1alpha";

// rpcs related to the distribution of information about the relay group to
// agents
service DiscoveryService {
  // returns info about the relay group and how agents should behave
  rpc Discover(DiscoverRequest) returns (DiscoverResponse);
}

// request message for DiscoveryService.Discover
message DiscoverRequest {}

// response message for DiscoveryService.Discover
message DiscoverResponse {
  string relay_group = 1;

  int32 target_connection_count = 2;
}
